<resources>
	<string name="app_name">플리마켓</string>
	<string name="action_settings">설정</string>
	<string name="action_add_category">카테고리 추가</string>
	<string name="section_format">Hello World from section: %1$d</string>
	<string name="act_title_input_category">카테고리 추가</string>
	<string name="act_title_input_product_income">매출 추가</string>
	<string name="act_title_input_product_out">매입 추가</string>
	<string name="act_title_product_list">제품목록</string>
	<string name="act_title_category_list">카테고리</string>
	<string name="act_title_market_list">마켓</string>
	<string name="act_title_vendor_list">구매처</string>
	<string name="action_category_list">카테고리 목록</string>
	<string name="action_product_list">제품 목록</string>
	<string name="action_vendor_list">매입처 목록</string>
	<string name="action_market_list">마켓 목록</string>
</resources>
