<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.github.quadflask.fleamarketseller.view.MainActivity">

	<item android:id="@+id/action_category_list"
	      android:orderInCategory="100"
	      android:title="@string/action_category_list"
	      app:showAsAction="never"/>

	<item android:id="@+id/action_product_list"
	      android:orderInCategory="100"
	      android:title="@string/action_product_list"
	      app:showAsAction="never"/>

	<item android:id="@+id/action_vendor_list"
	      android:orderInCategory="100"
	      android:title="@string/action_vendor_list"
	      app:showAsAction="never"/>

	<item android:id="@+id/action_market_list"
	      android:orderInCategory="100"
	      android:title="@string/action_market_list"
	      app:showAsAction="never"/>

	<item android:id="@+id/action_settings"
	      android:orderInCategory="100"
	      android:title="@string/action_settings"
	      app:showAsAction="never"/>
</menu>
